varlen_example/shouldfail/invalid_len_expr.stderr
error[E0425]: cannot find value `x` in this scope
  --> shouldfail/invalid_len_expr.rs:17:15
   |
17 |     arr: [u8; x * y],
   |               ^ not found in this scope

error[E0425]: cannot find value `y` in this scope
  --> shouldfail/invalid_len_expr.rs:17:19
   |
17 |     arr: [u8; x * y],
   |                   ^ not found in this scope

error[E0308]: mismatched types
  --> shouldfail/invalid_len_expr.rs:20:16
   |
20 |     arr2: [u8; self.u8_len],
   |                ^^^^^^^^^^^
   |                |
   |                expected `usize`, found `u8`
   |                expected `usize` because of return type

error[E0609]: no field `not_a_header` on type `&Header`
  --> shouldfail/invalid_len_expr.rs:23:21
   |
23 |     arr3: [u8; self.not_a_header],
   |                     ^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `u8_len`
